2012-08-26  Niels Grewe <niels.grewe@halbordnung.de>

	*  configure.ac: Check for sys/filio.h and whether we need to
	link libsocket (as on QNX).
	*  configure
	*  SSL/configure
	*  Headers/GNUstepBase/config.h.in:
	Regenerate.
	*  Source/common.h
	*  Source/GSFileHandle.m
	*  Source/NSMessagePort.m
	*  Source/NSSocketPort.m
	*  Source/NSThread.m
	*  SSL/GSSSLHandle.m:
	QNX compatibility tweaks.
	*  Tools/gdnc.m
	*  Tools/gdomap.c:
	Use slog facility for logging on QNX.

	Compatibility improvements for building for QNX.

2012-08-26  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for QNX slog facilities.
	* Headers/GNUstepBase/config.h.in
	* configure:
	Regenerate
	* Source/NSLog.m: Implement logging to the QNX slog.

	Add support for logging to the QNX slog via NSLog().

2012-08-25  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Allow a cross-compilation configuration to be
	specified using the `--with-cross-compilation-info=' switch.
	Tweak configure script to behave gracefully when
	cross-compiling.
	* configure: Regenerate.
	* cross.config: Add default values for cross-compilation.

	Make the configure script behave more friendly when
	cross-compiling.

2012-08-16  Niels Grewe <niels.grewe@halbordnung.de>

	* configure.ac: Check for objc_root_class attribute
	* configure: Regenerate
	* config/objc-common.g: Annotate root classes.
	* Headers/GNUstepBase/config.h.in: Regenerate
	* Headers/GNUstepBase/GSConfig.h.in: Add macro for root class
	attribute availability.
	* Headers/GNUstepBase/GSVersionMacros.h: Define GS_ROOT_CLASS
	depending on whether the compiler supports it.
	* Headers/Foundation/NSObject.h: Mark NSObject as a root class.
	* Headers/Foundation/NSProxy.h: Mark NSProxy as a root class.
	* Source/NSDistantObject: Mark GSDistantObjectPlaceholder as a
	root class.
	* Source/NSObject.m: Mark NSZombie as a root class.

	Changes to support clang's __attribute__((objc_root_class)).
 	